--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,28 @@
-# Common requirements that project needs in every environment 
-
 Django==5.1.7
-
-
-
-redis
-django-redis
-celery
-django-celery-results
-djangorestframework
-django-cors-headers
-django-jazzmin
-dj-database-url
-python-dotenv
-channels
+djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
+django-cors-headers==4.7.0
+django-redis==5.4.0
+django-jazzmin==3.0.1
+django-celery-results==2.5.1
+dj-database-url==2.3.0
+python-dotenv==1.1.0
+celery==5.4.0
+redis==5.2.1
+channels==4.2.0
+asgiref==3.8.1
+sqlparse==0.5.3
+billiard==4.2.1
+kombu==5.5.1
+vine==5.1.0
+click==8.1.8
+click-didyoumean==0.3.1
+click-repl==0.3.0
+click-plugins==1.1.1
+tzdata==2025.2
+python-dateutil==2.9.0.post0
+typing-extensions==4.13.0
+amqp==5.3.1
+prompt-toolkit==3.0.50
+six==1.17.0
+wcwidth==0.2.13
